--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Himshikha bhandari's Website</title>
+    <title>Himshikha bhandari</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -41,13 +41,8 @@
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#qualification" class="nav-item nav-link">Quality</a>
                 <a href="#skill" class="nav-item nav-link">Skill</a>
-                <!-- <a href="#service" class="nav-item nav-link">Service</a> -->
-                <!-- <a href="#portfolio" class="nav-item nav-link">Portfolio</a> -->
-                <!-- <a href="#testimonial" class="nav-item nav-link">Review</a> -->
-                <!-- <a href="#blog" class="nav-item nav-link">Blog</a> -->
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <!-- <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a> -->
         </div>
     </nav>
     <!-- Navbar End -->
@@ -83,14 +78,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Himshikha Bhandari</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">A Quality Assurance Engineer</div>
-                    <!-- <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <!-- <a href="" class="btn btn-outline-light mr-5">Download CV</a>
-                        <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/watch?v=sa92Uu4wj0U" data-target="#videoModal">
-                            <span></span>
-                        </button>
-                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5> -->
+                    <div class="typed-text d-none">A Quality Assurance Enthusiastic</div>
                     </div> -->
                 </div>
             </div>
@@ -111,9 +99,9 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Quality Assurance Engineer</h3>
-                    <p>I am currently Undergraduate student of Bachelor In Information technology at KIST college.I am at the beginner level on Quality Assurance. so, I am learning alot of things .I am fully interested
-                        on Testing field so,i will tries to give my best in upcoming days.
+                    <h3 class="mb-4">A Quality Assurance Learner</h3>
+                    <p>I am a Self-motivated, Enthusiastic, Hard-working learner specializing in the Quality Assurance field to
+					follow my passion for learning new things every day.
                         Thank you.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Himshikha Bhandari</span></h6></div>
@@ -149,19 +137,19 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Bachelour In Information tehnology</h5>
                             <p class="mb-2"><strong>Purvanchal University, Kist college</strong> | <small>2018 - 2023</small></p>
-                            <p>I am currently  undergraduate student of Bachelour in information technology at kist college which is located at kamalpokhari.</p>
+                            <p>I am currently an undergraduate student for a bachelor’s in information technology at Kist college which is located at kamalpokhari.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">+2 in Science faculty</h5>
                             <p class="mb-2"><strong></strong> Sagarmatha college|<small>2016 - 2018</small></p>
-                            <p>I did my +2 in science faculty from sagaramatha college which is located at siraha district.</p>
+                            <p>I did my +2 in science faculty from Sagarmatha college which is located in the Siraha district.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Schooling</h5>
-                            <p class="mb-2"><strong>Sagarmatha higher secondary boarding school</strong> | <small>upto 2016</small></p>
-                            <p>I completed upto SEE from sagarmatha higher secondary boarding school which is located at siraha district.</p>
+                            <p class="mb-2"><strong>Sagarmatha higher secondary boarding school</strong> | <small>up to 2016</small></p>
+                            <p>I completed up to SEE from Sagarmatha higher secondary boarding school which is located in the Siraha district.</p>
                         </div>
                     </div>
                 </div>
