--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <a class="btn btn-light btn-social mr-2" href="https://twitter.com/himso123" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/shikha.bhandari.104/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/himshikha-bhandari/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="https://instagram.com/https://www.instagram.com/bhandarishikha00/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social" href="https://www.instagram.com/bhandarishikha00/" target="_blank"><i class="fab fa-instagram"></i></a>
                 
             </div><a href="mailto:shikhabhandari730@gmail.com"
                 class="footer__link text-white">shikhabhandari730@gmail.com</a>
