--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                     <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
-                    <h3 class="text-white font-weight-normal mb-3">I'm</h3>
+                    <h3 class="text-white font-weight-normal mb-3"><b>Hello</b> I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Himshikha Bhandari</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">A Quality Assurance Enthusiastic</div>
+                    <div class="typed-text d-none">A Quality Assurance Enthusiast</div>
                     </div> -->
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Himshikha Bhandari</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">17 November 2000</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachelour running</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachelor running</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">Freshers</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">9813092237</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">shikhabhandari730@gmail.com</span></h6></div>
@@ -135,9 +135,9 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Bachelour In Information tehnology</h5>
-                            <p class="mb-2"><strong>Purvanchal University, Kist college</strong> | <small>2018 - 2023</small></p>
-                            <p>I am currently an undergraduate student for a bachelor’s in information technology at Kist college which is located at kamalpokhari.</p>
+                            <h5 class="font-weight-bold mb-1">Bachelor Of Information tehnology</h5>
+                            <p class="mb-2"><strong>Purvanchal University, Kist college</strong> | <small>2018 - present</small></p>
+                            <p>I am currently an undergraduate student for a bachelor’s of information technology at Kist college which is located at kamalpokhari.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -180,7 +180,7 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">CSS</h6>
-                            <h6 class="font-weight-bold">70%</h6>
+                            <h6 class="font-weight-bold">75%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -188,18 +188,37 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Postman</h6>
+                            <h6 class="font-weight-bold">Core java </h6>
+                            <h6 class="font-weight-bold">70%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+					 <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">MYSql </h6>
+                            <h6 class="font-weight-bold">80%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+					 <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">Git </h6>
                             <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
+					
                 </div>
                 <div class="col-md-6">
-                    <div class="skill mb-4">
+					<div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Core Java</h6>
+                            <h6 class="font-weight-bold">Api testing-Postman</h6>
                             <h6 class="font-weight-bold">70%</h6>
                         </div>
                         <div class="progress">
@@ -208,7 +227,16 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">MySQL</h6>
+                            <h6 class="font-weight-bold">Performance testing-Jmeter</h6>
+                            <h6 class="font-weight-bold">70%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">Jira</h6>
                             <h6 class="font-weight-bold">85%</h6>
                         </div>
                         <div class="progress">
@@ -218,12 +246,22 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">Manual testing</h6>
-                            <h6 class="font-weight-bold">70%</h6>
+                            <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
+					<div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">Others</h6>
+                            <h6 class="font-weight-bold">...</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+				
                 </div>
             </div>
         </div>
